--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,8 +1,11 @@
 .contacts {
-  display: grid;
-  grid-template-columns: 3fr 2fr 1fr;
+  // display: grid;
+  // grid-template-columns: 3fr 2fr 1fr;
+  display: flex;
+  flex-direction: row;
 
   @media (max-width: $desktop-width) {
+    display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-areas:
       "sub sub"
