--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -18,6 +18,7 @@
 }
 
 .blog__list {
+  @include padding(62px, 119px);
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
@@ -25,11 +26,10 @@
     "power trend";
   grid-gap: 30px;
 
-  @include padding(62px, 119px);
-
   @media (max-width: $desktop-width) {
     display: flex;
     flex-direction: column;
+    align-items: center;
     grid-gap: 50px;
     padding-bottom: 70px;
   }
@@ -37,6 +37,7 @@
   @media (max-width: $tablet-width) {
     @include padding(52px, 59px);
     grid-gap: 41px;
+    align-items: unset;
   }
 }
 
@@ -45,6 +46,14 @@
   background-color: $light_grey;
   grid-area: care;
   margin: 0;
+
+  @media (max-width: $desktop-width) {
+    width: 678px;
+  }
+
+  @media (max-width: $tablet-width) {
+    width: unset;
+  }
 
   &:nth-child(3n+2) {
     grid-area: power;
@@ -64,23 +73,18 @@
   text-decoration: none;
   display: flex;
   flex-direction: row-reverse;
-  min-height: 300px;
+  overflow: hidden;
+  height: 300px;
 
   @media (max-width: $tablet-width) {
     flex-direction: column-reverse;
-    max-height: unset;
+    height: unset;
   }
 
   & img {
     height: 100%;
-
-    @media (max-width: $desktop-width) {
-      width: 339px;
-    }
-
-    @media (max-width: $tablet-width) {
-      width: 100%;
-    }
+    width: 100%;
+    object-fit: cover;
   }
 
   .blog__item:nth-child(3n+2) & {
@@ -93,35 +97,35 @@
 
   .blog__item:nth-child(3n+3) & {
     position: relative;
-    max-height: 630px;
+    height: 630px;
 
     @media (max-width: $desktop-width) {
       display: flex;
       flex-direction: row-reverse;
-      max-height: 300px;
+      height: 300px;
     }
 
     @media (max-width: $tablet-width) {
       flex-direction: column-reverse;
-      max-height: unset;
+      height: unset;
     }
   }
 }
 
 .blog__text {
+  @include padding(11%, 10%);
   width: 50%;
   background-color: $light_grey;
-
-  @include padding(11%, 10%);
+  height: 300px;
 
   @media (max-width: $desktop-width) {
     padding-top: 65px;
   }
 
   @media (max-width: $tablet-width) {
-    width: 100%;
-
     @include padding(35px, 49px);
+    width: 100%;
+    height: 246px;
   }
 
   & > time {
