--- a/source/sass/blocks/cite.scss
+++ b/source/sass/blocks/cite.scss
@@ -1,7 +1,11 @@
 .cite {
+  padding-left: 90px;
+  padding-top: 3px;
+
   @media (max-width: $desktop-width) {
     grid-area: cite;
-    padding-top: 48px;
+    padding-top: 44px;
+    padding-left: 0;
   }
 
   @media (max-width: $tablet-width) {
@@ -11,10 +15,10 @@
 
 .cite__list {
   column-count: 2;
-  column-gap: 50px;
+  column-gap: 72px;
 
   @media (max-width: $desktop-width) {
-    column-gap: 75px;
+    column-gap: 78px;
   }
 
   @media (max-width: $tablet-width) {
