--- a/source/sass/blocks/inst.scss
+++ b/source/sass/blocks/inst.scss
@@ -5,7 +5,7 @@
   & > h2 {
     @include text(34px, 44px, 700);
     letter-spacing: 0.03em;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
 
     @media (max-width: $desktop-width) {
       margin-bottom: 19px;
@@ -22,23 +22,24 @@
 }
 
 .inst__list {
-  @include padding(65px, 132px);
+  @include padding(62px, 132px);
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr 1fr;
-  row-gap: 25px;
+  grid-template-columns: 1fr 1.8fr 1fr 1fr;
+  row-gap: 36px;
   column-gap: 27px;
 
   @media (max-width: $desktop-width) {
-    @include padding(60px, 80px);
+    @include padding(60px, 71px);
     row-gap: 20px;
     column-gap: 16px;
   }
 
   @media (max-width: $tablet-width) {
     @include padding(46px, 71px);
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
     row-gap: 27px;
     column-gap: 24px;
+    justify-items: center;
   }
 }
 
@@ -46,38 +47,40 @@
   grid-row: span 2;
 }
 
-// .inst__item img {
-//   max-width: 230px;
-//   max-height: 230px;
+.inst__item {
+  display: flex;
+  overflow: hidden;
+  max-width: 230px;
+  max-height: 230px;
 
-//   @media (max-width: $desktop-width) {
-//     max-width: 133px;
-//     max-height: 133px;
-//   }
-// }
+  @media (max-width: $desktop-width) {
+    max-width: 133px;
+    max-height: 133px;
+  }
+}
 
-// .inst__item--big img {
-//   max-width: 399px;
-//   max-height: 412px;
+.inst__item--big {
+  max-width: 399px;
+  max-height: 412px;
 
-//   @media (max-width: $desktop-width) {
-//     max-width: 231px;
-//     max-height: 240px;
-//   }
+  @media (max-width: $desktop-width) {
+    max-width: 231px;
+    max-height: 240px;
+  }
 
-//   @media (max-width: $tablet-width) {
-//     max-width: 233px;
-//     max-height: 247px;
-//   }
-// }
+  @media (max-width: $tablet-width) {
+    max-width: 133px;
+    max-height: 247px;
+  }
+}
 
-// .inst__item--small img {
-//   max-height: 150px;
+.inst__item--small {
+  max-height: 150px;
 
-//   @media (max-width: $desktop-width) {
-//     max-height: 87px;
-//   }
-// }
+  @media (max-width: $desktop-width) {
+    max-height: 87px;
+  }
+}
 
 .inst__item--no-mobile {
   @media (max-width: $tablet-width) {
@@ -86,7 +89,8 @@
 }
 
 .inst__link img {
-  object-fit: cover;
+  // object-fit: cover;
   max-width: 100%;
-  // max-height: 100%;
+  max-height: 100%;
+  display: block;
 }
