--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,10 +1,12 @@
 .socials {
   margin-left: auto;
+  padding-top: 3px;
 
   @media (max-width: $desktop-width) {
     grid-area: socials;
-    padding-top: 48px;
-    padding-left: 47px;
+    padding-top: 44px;
+    padding-left: 43px;
+    margin-left: unset;
   }
 
   @media (max-width: $tablet-width) {
@@ -49,9 +51,10 @@
     width: 15px;
     height: 15px;
     vertical-align: middle;
+    margin-right: 10px;
 
     @media (max-width: $desktop-width) {
-      margin-right: 10px;
+      // margin-right: 10px;
     }
 
     @media (max-width: $tablet-width) {
