--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,3 +14,4 @@ $text-font: "Poppins", "Arial", sans-serif;
 $mobile-width: 319px;
 $tablet-width: 767px;
 $desktop-width: 1023px;
+$pre-desktop-width: 1300px;
