Исправлены input для ios

--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -99,6 +99,8 @@
     min-height: 30px;
     width: 100%;
     -webkit-appearance: none;
+    border-radius: 0;
+    -webkit-border-radius: 0px;
     outline: none;
   }
 
