--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -25,9 +25,10 @@
   height: 15px;
   border: none;
   background-color: $basic_color;
-  -webkit-border-radius: 20px;
-  -khtml-border-radius: 20px;
-  -moz-border-radius: 20px;
+  // -webkit-border-radius: 20px;
+  // -khtml-border-radius: 20px;
+  // -moz-border-radius: 20px;
+  padding: 0;
   border-radius: 20px;
   cursor: pointer;
   top: -8px;
