--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -30,6 +30,7 @@
   // -moz-border-radius: 20px;
   padding: 0;
   border-radius: 20px;
+  -webkit-appearance: none;
   cursor: pointer;
   top: -8px;
 }
