--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,7 @@ $basic_grey: #9b9997;
 $light_grey: #f0eae4;
 $border_grey: #f6f5f4;
 $scale_color: #f0eae4;
+$input_white: rgba(255, 255, 255, 0.15);
 // fonts
 $caption-font: "Cormorant Garamond", "Times New Roman", serif;
 $text-font: "Poppins", "Arial", sans-serif;
