--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -1,20 +1,23 @@
 .filter {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .filter__form {
   @media (max-width: $desktop-width) {
     &.filter__form--opened {
-      @include pseudo($display: block, $pos: absolute, $content: "");
+      @include pseudo($display: block, $pos: fixed, $content: "");
       @include padding(12px, 40px);
-      min-height: auto;
       width: 90%;
-      top: 400px;
+      top: 50%;
       left: 0;
       background-color: $basic_white;
       box-shadow: 0 0 10px $medium_black;
       z-index: 3;
+      max-height: 100vh;
+      // overflow-y: auto;
+      transform: translateY(-50%);
     }
 
     &.filter__form--closed {
@@ -74,6 +77,7 @@
 
 .filter__container {
   border: 1px solid $basic_color;
+  position: relative;
 
   @media (max-width: $desktop-width) {
     border-top: none;
